lintian (2.5.2) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added:
      - package-has-long-file-name
      - source-package-component-has-long-file-name
      - upstart-job-in-etc-init.d-not-registered-via-update-rc.d
      - debian-rules-uses-deprecated-makefile
    + Removed:
      - calls-suidperl-directly
      - suid-perl-script-but-no-perl-suid-dep

  * checks/*:
    + [NT] Migrated to use new methods in the Lintian::Collect
      interfaces rather than accessing the Lab directly.
  * checks/{debconf,conffiles}.desc:
    + [NT] Added missing bin-pkg-control Needs-Info.
  * checks/{cruft,fields}{,.desc}:
    + [NT] Relocated doc pkg not arch all tag; it was never
      triggered since cruft was a source check and the tag
      could only be triggered for binary packages.
  * checks/binaries:
    + [NT] Added lib/${MULTIARCH_DIR} to the list of paths to
      check for public shared libraries.  Thanks to Sven Joachim
      for the report and the patch.  (Closes: #630698)
    + [NT] Recognise .gox files as object files that cannot be
      stripped.  Thanks to Matthias Klose for the report.
      (Closes: #624521)
    + [NT] Do not assume that the architecture field is present.
  * checks/changelog-file:
    + [NT] Removed exception for symlinked changelogs if the
      package had an Ubuntu version.  This exception is now
      handled by the profile.  Thanks to Benjamin Drung for the
      heads up.
  * checks/circular-deps.desc:
    + [NT] Fixed typo; thanks to Nicolás Alvarez for the report
      and patch.  (Closes: #630925)
  * checks/copyright-file:
    + [NT] Stricten one of the regexes for catching left over
      helper templates.  This should prevent false-positives for
      some license texts.  Thanks to Charles Plessy for the
      report.  (Closes: #631674)
    + [NT] Use group data to determine if a package is foreign
      or not for symlinked /usr/share/doc/<pkg> dirs.  This