@@ -38,3 +38,12 @@ Certainty: possible
 Info: tar produced an error while listing the contents of the data
  member of this package.  This probably means there's something broken or
  at least strange about the way the package was constructed.
+
+Tag: udeb-uses-non-gzip-data-tarball
+Severity: serious
+Certainty: certain
+Info: This udeb contains non-gzip data tarballs.  udpkg,
+ debian-installer's dpkg equivalent, does not support non-gzip
+ tarballs which means udebs that contain them will not be
+ installable. This can also break the daily or weekly d-i images.
+
