@@ -1,5 +1,5 @@
 Last generated 2011-07-20
-Coverage: 657/912 (72.04%), w. legacy tests: 802/912 (87.94%)
+Coverage: 658/913 (72.07%), w. legacy tests: 803/913 (87.95%)
 
 The following tags are not tested by the test suite:
 
