@@ -1,0 +1,17 @@
+Source: {$srcpkg}
+Priority: extra
+Section: debian-installer
+Maintainer: {$author}
+Standards-Version: {$standards_version}
+Build-Depends: debhelper (>= 7.0.50~)
+
+Package: some-udeb
+Architecture: all
+Depends: $\{misc:Depends\}
+Package-Type: udeb
+Description: {$description}
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+
